IVMDescriptor interface introduced. VMDescriptorBase implements IVMDescriptor. Generic type constraints changed to IVMDescriptor.

--- a/Dev/Source/Mvvm/Mvvm.csproj
+++ b/Dev/Source/Mvvm/Mvvm.csproj
@@ -230,6 +230,7 @@
     <Compile Include="ViewModels\Core\Common\Paths\PathIterator.cs" />
     <Compile Include="ViewModels\Core\Common\Paths\PathStep.cs" />
     <Compile Include="ViewModels\Core\Common\Paths\Definition\PathTerminationStep.cs" />
+    <Compile Include="ViewModels\Core\ViewModel\Descriptor\IVMDescriptor.cs" />
     <Compile Include="ViewModels\Core\ViewModel\TypeDescriptor\ViewModelPropertyDescriptor.cs" />
     <Compile Include="ViewModels\Core\Undo\Actions\CollectionModificationAction.cs" />
     <Compile Include="ViewModels\Core\Undo\Actions\InitialPseudoAction.cs" />
