--- a/Dev/Source/Mvvm/Mvvm.csproj
+++ b/Dev/Source/Mvvm/Mvvm.csproj
@@ -161,6 +161,7 @@
     <Compile Include="ViewModels\Core\Properties\CollectionProperty\BehaviorInterfaces\ICollectionChangeHandlerBehavior.cs" />
     <Compile Include="ViewModels\Core\Properties\CommandProperty\BehaviorInterfaces\ICommandCanExecuteBehavior.cs" />
     <Compile Include="ViewModels\Core\Properties\CommandProperty\BehaviorInterfaces\ICommandExecuteBehavior.cs" />
+    <Compile Include="ViewModels\Core\Properties\Common\Behaviors\PropertyPreloaderBehavior.cs" />
     <Compile Include="ViewModels\Core\Properties\SimpleProperty\Behaviors\RefreshablePropertyChangedNotifierBehavior.cs" />
     <Compile Include="ViewModels\Core\Properties\ViewModelProperty\Behaviors\StoredViewModelAccessorBehavior.cs" />
     <Compile Include="ViewModels\Core\Validation\BehaviorInterfaces\PropertyBehaviors\IDescendantsValidationResultProviderBehavior.cs" />
