--- a/Dev/Source/Mvvm/Mvvm.csproj
+++ b/Dev/Source/Mvvm/Mvvm.csproj
@@ -174,6 +174,7 @@
     <Compile Include="ViewModels\Core\Validation\CollectionResultTarget.cs" />
     <Compile Include="ViewModels\Core\Validation\CollectionValidationController.cs" />
     <Compile Include="ViewModels\Core\Validation\ValidationController.cs" />
+    <Compile Include="ViewModels\Core\Validation\ValidationTarget.cs" />
     <Compile Include="ViewModels\Core\ViewModel\BehaviorInterfaces\IChangeHandlerBehavior.cs" />
     <Compile Include="ViewModels\Core\ViewModel\BehaviorInterfaces\IRefreshControllerBehavior.cs" />
     <Compile Include="ViewModels\Core\Validation\BehaviorInterfaces\ViewModelBehaviors\IValidationExecutorBehavior.cs" />
