PropertyStep modified. Fluentinterface for Declarative Dependencies & tests implemented.

--- a/Dev/Source/Mvvm/Mvvm.csproj
+++ b/Dev/Source/Mvvm/Mvvm.csproj
@@ -145,12 +145,22 @@
     <Compile Include="ViewModels\- No Namespace -\Validation\ValidationResultScope.cs" />
     <Compile Include="ViewModels\- No Namespace -\ViewModel.cs" />
     <Compile Include="ViewModels\- No Namespace -\VMDescriptorBuilder.cs" />
+    <Compile Include="ViewModels\Core\Common\IPropertySelector.cs" />
     <Compile Include="ViewModels\Core\Common\Paths\Definition\AnyPropertyStep.cs" />
     <Compile Include="ViewModels\Core\Common\Paths\Definition\AnyStepsStep.cs" />
     <Compile Include="ViewModels\Core\Common\Paths\Definition\CollectionPropertyStep.cs" />
     <Compile Include="ViewModels\Core\Common\Paths\Definition\CollectionStep.cs" />
     <Compile Include="ViewModels\Core\Common\Paths\Definition\OptionalStep.cs" />
     <Compile Include="ViewModels\Core\Common\Paths\Definition\OrStep.cs" />
+    <Compile Include="ViewModels\Core\Common\PropertySelector.cs" />
+    <Compile Include="ViewModels\Core\FluentDescriptorBuilder\Dependencies\Actions\DependencyAction.cs" />
+    <Compile Include="ViewModels\Core\FluentDescriptorBuilder\Dependencies\Actions\ExecuteAction.cs" />
+    <Compile Include="ViewModels\Core\FluentDescriptorBuilder\Dependencies\Actions\RefreshAction.cs" />
+    <Compile Include="ViewModels\Core\FluentDescriptorBuilder\Dependencies\Actions\ValidationAction.cs" />
+    <Compile Include="ViewModels\Core\FluentDescriptorBuilder\Dependencies\DependencyBuilderOperation.cs" />
+    <Compile Include="ViewModels\Core\FluentDescriptorBuilder\Dependencies\DeclarativeDependency.cs" />
+    <Compile Include="ViewModels\Core\FluentDescriptorBuilder\Dependencies\DependencySourceBuilder.cs" />
+    <Compile Include="ViewModels\Core\FluentDescriptorBuilder\Dependencies\DependencyTargetBuilder.cs" />
     <Compile Include="ViewModels\Core\ViewModel\Behaviors\DeclarativeDependencyBehavior.cs" />
     <Compile Include="ViewModels\Core\FluentDescriptorBuilder\Dependencies\Interfaces\IActionOrAnyDescendantBuilder.cs" />
     <Compile Include="ViewModels\Core\FluentDescriptorBuilder\Dependencies\Interfaces\IDependencyActionBuilder.cs" />
