--- a/Dev/Source/MvvmTest/MvvmTest.csproj
+++ b/Dev/Source/MvvmTest/MvvmTest.csproj
@@ -242,6 +242,7 @@
     <Compile Include="ViewModels\Core\Properties\ViewModelProperty\ViewModelPropertyAccessorFixture.cs" />
     <Compile Include="ViewModels\Core\Properties\ViewModelProperty\WrapperViewModelAccessorBehaviorTests.cs" />
     <Compile Include="ApiTests\ViewModels\Validation\MultipleOwnerCollectionsValidationFixture.cs" />
+    <Compile Include="ViewModels\Core\Validation\Behaviors\CachingValidationResultAggregatorBehaviorTests.cs" />
     <Compile Include="ViewModels\Core\Validation\ValidationControllerTests.cs" />
     <Compile Include="ViewModels\Core\ViewModel\TypeDescriptor\TypeDescriptorProviderBehaviorTests.cs" />
     <Compile Include="ViewModels\Core\ViewModel\TypeDescriptor\ViewModelPropertyDescriptorTests.cs" />
