Advanced type descriptor design time support.

--- a/Dev/Source/Mvvm/Mvvm.csproj
+++ b/Dev/Source/Mvvm/Mvvm.csproj
@@ -247,7 +247,8 @@
     <Compile Include="ViewModels\Core\ViewModel\Descriptor\IVMDescriptor.cs" />
     <Compile Include="ViewModels\Core\ViewModel\TypeDescriptor\BehaviorInterfaces\IPropertyDescriptorProviderBehavior.cs" />
     <Compile Include="ViewModels\Core\ViewModel\TypeDescriptor\ClassDescriptorAttribute.cs" />
-    <Compile Include="ViewModels\Core\ViewModel\TypeDescriptor\TypedBindingList.cs" />
+    <Compile Include="ViewModels\Core\ViewModel\TypeDescriptor\BrowsableViewModelList.cs" />
+    <Compile Include="ViewModels\Core\ViewModel\TypeDescriptor\PropertyDescriptorDecorator.cs" />
     <Compile Include="ViewModels\Core\ViewModel\TypeDescriptor\ViewModelPropertyDescriptor.cs" />
     <Compile Include="ViewModels\Core\Undo\Actions\CollectionModificationAction.cs" />
     <Compile Include="ViewModels\Core\Undo\Actions\InitialPseudoAction.cs" />
