--- a/Dev/Source/MvvmTest/MvvmTest.csproj
+++ b/Dev/Source/MvvmTest/MvvmTest.csproj
@@ -215,6 +215,7 @@
     <Compile Include="ViewModels\Core\Common\Paths\OptionalStepTests.cs" />
     <Compile Include="ViewModels\Core\Common\Paths\StepFixture.cs" />
     <Compile Include="ViewModels\Core\FluentDescriptorBuilder\DependencyBuilderTests.cs" />
+    <Compile Include="ViewModels\Core\FluentDescriptorBuilder\ViewModelBehaviorBuilderTests.cs" />
     <Compile Include="ViewModels\Core\Properties\Common\CachedAccessorBehaviorTests.cs" />
     <Compile Include="ViewModels\Core\Properties\Common\DisplayValueBehaviorTests.cs" />
     <Compile Include="ViewModels\Core\FluentDescriptorBuilder\VMPropertyBuilderTests.cs" />
