--- a/Dev/Source/MvvmContrib/MvvmContrib.csproj
+++ b/Dev/Source/MvvmContrib/MvvmContrib.csproj
@@ -116,6 +116,7 @@
     <Compile Include="ViewModels\EnumSelectionPropertyBuilder.cs" />
     <Compile Include="ViewModels\ISelectionPropertyBuilder.cs" />
     <Compile Include="ViewModels\IVMPropertyFactory.cs" />
+    <Compile Include="ViewModels\MultiSelection\MultiSelectionItemVM.cs" />
     <Compile Include="ViewModels\MultiSelection\MultiSelectionVM.cs" />
     <Compile Include="ViewModels\MultiSelection\LookupPopulatorCollectionBehavior.cs" />
     <Compile Include="ViewModels\MultiSelection\MultiSelectionBuilder.cs" />
