--- a/Dev/Source/MvvmContribTest/MvvmContribTest.csproj
+++ b/Dev/Source/MvvmContribTest/MvvmContribTest.csproj
@@ -61,10 +61,12 @@
     </Compile>
     <Compile Include="ApiTests\ViewModels\PerformanceTests.cs" />
     <Compile Include="ApiTests\ViewModels\Selection\Domain\Department.cs" />
+    <Compile Include="ApiTests\ViewModels\Selection\SelectionItemVMTests.cs" />
     <Compile Include="ApiTests\ViewModels\Selection\SingleSelectionTests.cs" />
     <Compile Include="ApiTests\ViewModels\Selection\SimpleSingleSelectionTests.cs" />
     <Compile Include="ApiTests\ViewModels\Selection\MultiSelectionTests.cs" />
     <Compile Include="ApiTests\ViewModels\Selection\SimpleMultiSelectionTests.cs" />
+    <Compile Include="ApiTests\ViewModels\Selection\TypeDescriptorTests.cs" />
     <Compile Include="ApiTests\ViewModels\Selection\VMs\DepartmentVM.cs" />
     <Compile Include="AssertHelper.cs" />
     <Compile Include="Bootstrapper.cs" />
