INeedsInitialization is now als called if subject is a derived type.

--- a/Dev/Source/MvvmTest/MvvmTest.csproj
+++ b/Dev/Source/MvvmTest/MvvmTest.csproj
@@ -185,6 +185,7 @@
     <Compile Include="PropertyChangedCounter.cs" />
     <Compile Include="ReflectionServiceLocator.cs" />
     <Compile Include="Screens\ScreenCreationBehaviorTest.cs" />
+    <Compile Include="Screens\ScreenInitializerTests.cs" />
     <Compile Include="Stubs\BehaviorContextStub.cs" />
     <Compile Include="Stubs\ServiceLocatorStub.cs" />
     <Compile Include="Stubs\ViewModelStub.cs" />
