--- a/Dev/Source/MvvmTestability/MvvmTestability.csproj
+++ b/Dev/Source/MvvmTestability/MvvmTestability.csproj
@@ -9,7 +9,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Inspiring.Mvvm</RootNamespace>
-    <AssemblyName>MvvmTestability</AssemblyName>
+    <AssemblyName>InspiringMvvmTestability</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>SAK</SccProjectName>
