SingleSelectionWithSourceVM<TSourceObject, TItemSource, TItemVM> uses  SelectableItemVM now.

--- a/Dev/Source/MvvmContrib/MvvmContrib.csproj
+++ b/Dev/Source/MvvmContrib/MvvmContrib.csproj
@@ -116,13 +116,13 @@
     <Compile Include="ViewModels\EnumSelectionPropertyBuilder.cs" />
     <Compile Include="ViewModels\ISelectionPropertyBuilder.cs" />
     <Compile Include="ViewModels\IVMPropertyFactory.cs" />
-    <Compile Include="ViewModels\MultiSelection\MultiSelectionItemVM.cs" />
     <Compile Include="ViewModels\MultiSelection\MultiSelectionVM.cs" />
     <Compile Include="ViewModels\MultiSelection\LookupPopulatorCollectionBehavior.cs" />
     <Compile Include="ViewModels\MultiSelection\MultiSelectionBuilder.cs" />
     <Compile Include="ViewModels\MultiSelection\MultiSelectionVMDescriptor.cs" />
     <Compile Include="ViewModels\MultiSelection\MultiSelectionWithSourceVM.cs" />
     <Compile Include="ViewModels\ReverseManyToManyCollection.cs" />
+    <Compile Include="ViewModels\SelectableItemVM.cs" />
     <Compile Include="ViewModels\SelectionBuilderExtensions.cs" />
     <Compile Include="ViewModels\SelectionExtensions.cs" />
     <Compile Include="ViewModels\SelectionItemVM.cs" />
