--- a/Dev/Source/MvvmTest/MvvmTest.csproj
+++ b/Dev/Source/MvvmTest/MvvmTest.csproj
@@ -149,6 +149,7 @@
     <Compile Include="ApiTests\ViewModels\Undo\UndoTests.cs" />
     <Compile Include="ApiTests\ViewModels\UntypedPropertyAccessTests.cs" />
     <Compile Include="ApiTests\ViewModels\Validation\ParentValidationTests.cs" />
+    <Compile Include="ApiTests\ViewModels\Validation\ValidationResultCachingTests.cs" />
     <Compile Include="ApiTests\ViewModels\Validation\ViewModelPropertyValidationTests.cs" />
     <Compile Include="ApiTests\ViewModels\Validation\CollectionRevalidationTests.cs" />
     <Compile Include="ApiTests\ViewModels\Validation\CollectionValidationFixture.cs" />
