--- a/Main/Source/MvvmTest/MvvmTest.csproj
+++ b/Main/Source/MvvmTest/MvvmTest.csproj
@@ -115,6 +115,7 @@
     <Compile Include="ApiTests\Common\EventTests.cs" />
     <Compile Include="ApiTests\ViewModels\CommandHandlerTests.cs" />
     <Compile Include="ApiTests\ViewModels\Core\PathDefinitionTests.cs" />
+    <Compile Include="ApiTests\ViewModels\Core\VMKernelTests.cs" />
     <Compile Include="ApiTests\ViewModels\DeclarativeDeendencies\DependencyExecuteActionTests.cs" />
     <Compile Include="ApiTests\ViewModels\DeclarativeDeendencies\DependencyRefreshActionTests.cs" />
     <Compile Include="ApiTests\ViewModels\DeclarativeDeendencies\DependencyTestBase.cs" />
