FolderBrowserDialog implemented. DialogService and TestDialogService adapted.

--- a/Main/Source/Mvvm/Mvvm.csproj
+++ b/Main/Source/Mvvm/Mvvm.csproj
@@ -146,6 +146,7 @@
     <Compile Include="Screens\ScreenFactory.cs" />
     <Compile Include="ServiceLocator.cs" />
     <Compile Include="Testing\ArgumentValue.cs" />
+    <Compile Include="Testing\Responders\FolderDialogResponderSetup.cs" />
     <Compile Include="Testing\TestScreenResult.cs" />
     <Compile Include="Testing\Responders\FileDialogResponderSetup.cs" />
     <Compile Include="Testing\DialogServiceInvocation.cs" />
@@ -390,6 +391,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>EViewModels.resx</DependentUpon>
     </Compile>
+    <Compile Include="Views\Dialogs\FolderBrowserDialog.cs" />
+    <Compile Include="Views\Dialogs\NativeMethods.cs" />
+    <Compile Include="Views\Dialogs\ShellComInterfaces.cs" />
     <Compile Include="Views\LegacyBinder\BinderBuildStep.cs" />
     <Compile Include="Views\LegacyBinder\BinderBuildStepRegistry.cs" />
     <Compile Include="Views\LegacyBinder\BinderContext.cs" />
