--- a/Features/EventSystem/Source/Mvvm/Mvvm.csproj
+++ b/Features/EventSystem/Source/Mvvm/Mvvm.csproj
@@ -106,7 +106,7 @@
     </Compile>
     <Compile Include="Common\Events\Event.cs" />
     <Compile Include="Common\Events\EventAggregator.cs" />
-    <Compile Include="Common\Events\EventOccurrence.cs" />
+    <Compile Include="Common\Events\EventPublication.cs" />
     <Compile Include="Common\Events\DefaultEventExtensions.cs" />
     <Compile Include="Common\Events\EventSubscription.cs" />
     <Compile Include="Common\Events\EventSubscriptionManager.cs" />
@@ -115,7 +115,6 @@
     <Compile Include="Common\Events\IEventSubscription.cs" />
     <Compile Include="Common\Events\IEventSubscriptionRepository.cs" />
     <Compile Include="Common\Events\IEventSubscriptionStore.cs" />
-    <Compile Include="Common\Events\WeakList.cs" />
     <Compile Include="Common\HashCodeService.cs" />
     <Compile Include="Common\ReferenceEqualityComparer.cs" />
     <Compile Include="Common\SealableObject.cs" />
