--- a/Spikes/BehaviorSpike/BehaviorSpike/BehaviorSpike.csproj
+++ b/Spikes/BehaviorSpike/BehaviorSpike/BehaviorSpike.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SpikeTest.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
