--- a/Source/MvvmTest/MvvmTest.csproj
+++ b/Source/MvvmTest/MvvmTest.csproj
@@ -323,6 +323,7 @@
     </Compile>
     <Compile Include="Views\ScreenConductorAdapterTest.cs" />
     <Compile Include="Views\ViewBinderTest.cs" />
+    <Compile Include="Views\ViewFactoryTests.cs" />
     <Compile Include="Views\ViewTest.cs" />
     <Compile Include="WpfTestHelper.cs" />
   </ItemGroup>
