--- a/Main/Source/MvvmContribTest/MvvmContribTest.csproj
+++ b/Main/Source/MvvmContribTest/MvvmContribTest.csproj
@@ -56,6 +56,9 @@
     </CodeAnalysisDependentAssemblyPaths>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\MvvmTest\MSTestAdapter.cs">
+      <Link>MSTestAdapter.cs</Link>
+    </Compile>
     <Compile Include="..\MvvmTest\PropertyChangedCounter.cs">
       <Link>PropertyChangedCounter.cs</Link>
     </Compile>
